<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <TextView 
        android:id="@+id/register"
        android:layout_marginTop="5dip"
        android:layout_width="wrap_content"
        android:layout_marginLeft="5dip"
        android:layout_height="20dip"
        android:text="@string/register"/>
    
    <EditText
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_width="280dip"
        android:layout_height="40dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_edit"
        android:layout_marginTop="120dip"/>
    
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_width="280dip"
        android:layout_height="40dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_edit"
        android:layout_marginTop="20dip"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal">
        <CheckBox 
            android:id="@+id/remname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="@string/remname"/>
        <CheckBox 
            android:id="@+id/rempass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:text="@string/rempass"/>
    </LinearLayout>

    
    <Button 
        android:id="@+id/login"
        android:textSize="20sp"
        android:layout_width="280dip"
        android:layout_height="50dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dip"
        android:background="@drawable/btn_login"
        android:text="@string/login"/>
</LinearLayout>
