<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A2B5CD"
     >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="#87CEFA"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:text="@string/about"/>
        <ImageView
            android:contentDescription="@string/app_name"
           	android:layout_width="150dip"
        	android:layout_height="130dip"
        	android:layout_gravity="center_horizontal"
            android:background="@drawable/logo"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/version"/>
        <TextView 
            android:layout_marginTop="10dip"
            android:layout_marginLeft="5dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feture"
            android:textSize="25sp"/>
        
        <ImageView 
            android:layout_gravity="center_horizontal"
            android:layout_width="100dip"
            android:layout_height="200dip"
            android:background="@drawable/show_1"
            android:contentDescription="@string/app_name"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/register_feture"
            android:textSize="15sp"/>
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
             <ImageView 
	            android:layout_width="100dip"
	            android:layout_height="200dip"
	            android:background="@drawable/show_2"
	            android:contentDescription="@string/app_name"/>
        
       		 <ImageView 
	            android:layout_width="100dip"
	            android:layout_height="200dip"
	            android:background="@drawable/show_4"
	            android:contentDescription="@string/app_name"/>
        </LinearLayout>
       
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login_feture"
            android:textSize="15sp"/>
        
        <ImageView 
            android:layout_gravity="center_horizontal"
            android:layout_width="100dip"
            android:layout_height="200dip"
            android:background="@drawable/show_3"
            android:contentDescription="@string/app_name"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/main_feture"
            android:textSize="15sp"/>
        
        
        <ImageView 
            android:layout_gravity="center_horizontal"
            android:layout_width="100dip"
            android:layout_height="200dip"
            android:background="@drawable/show_5"
            android:contentDescription="@string/app_name"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/search_feture"
            android:textSize="15sp"/>
        
        <ImageView 
            android:layout_gravity="center_horizontal"
            android:layout_width="100dip"
            android:layout_height="200dip"
            android:background="@drawable/show_6"
            android:contentDescription="@string/app_name"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/event_feture"
            android:textSize="15sp"/>
        
        <ImageView 
            android:layout_gravity="center_horizontal"
            android:layout_width="100dip"
            android:layout_height="200dip"
            android:background="@drawable/show_7"
            android:contentDescription="@string/app_name"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/people_feture"
            android:textSize="15sp"/>
        
        <ImageView 
            android:layout_gravity="center_horizontal"
            android:layout_width="100dip"
            android:layout_height="200dip"
            android:background="@drawable/show_8"
            android:contentDescription="@string/app_name"/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/location_feture"
            android:textSize="15sp"/>
        
        
    </LinearLayout>
    

</ScrollView>
