<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/defaulttitle"
	    android:gravity="center"
	    android:textSize="20sp"
	    android:id="@+id/title"/>
	
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/defaultnews"
	    android:id="@+id/news"/>
	<ImageView
	    android:contentDescription="@string/app_name"
	    android:layout_gravity="center_horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/news_image"/>
    </LinearLayout>
	
</ScrollView>
