<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1CDC1"
    android:orientation="vertical" >
    

    <TextView 
        android:layout_marginTop="160dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weixin_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
         <ImageView
	        android:background="@drawable/weixin" 
	        android:layout_width="50dip"
	        android:layout_height="50dip"
	        android:layout_marginLeft="50dip"
	        android:contentDescription="@string/app_name"/>
         <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="50dip"
	        android:text="@string/weixin"
	        android:gravity="center_vertical"/>
    </LinearLayout>
    
    
   
</LinearLayout>
