<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >
    
	<EditText
        android:id="@+id/register_username"
        android:hint="@string/username"
        android:layout_width="280dip"
        android:layout_height="40dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_edit"
        android:layout_marginTop="120dip"/>
	
	<EditText
        android:id="@+id/register_password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_width="280dip"
        android:layout_height="40dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_edit"
        android:layout_marginTop="20dip"/>
	
	<Button 
        android:id="@+id/register"
        android:layout_width="280dip"
        android:layout_height="40dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="110dip"
        android:text="@string/register_btn"/>
</LinearLayout>
