<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/server_bg"
    android:orientation="vertical" >

    <LinearLayout 
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <EditText
        android:id="@+id/search_edit"
        android:layout_width="200dip"
        android:layout_height="40dip"
        android:layout_marginTop="30dip"
        android:layout_marginLeft="20dip"
        android:background="@drawable/edit_bg"
        android:hint="@string/loc_and_title" />
       <Button 
           android:id="@+id/btn_search"
           android:layout_marginTop="30dip"
           android:layout_marginLeft="20dip"
           android:textSize="20sp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/search"/>
    </LinearLayout>
    
 		<RadioGroup 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton 
                android:checked="true"
                android:layout_marginTop="10dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:id="@+id/radioBtnLocation"/>
            <RadioButton 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="30dip"
                android:id="@+id/radioBtnTitle"/>
        </RadioGroup>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dip"
                android:textColor="#000000"
                android:textSize="15sp"
                android:text="@string/location"/>
             <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dip"
                android:textSize="15sp"
                android:textColor="#000000"
                android:text="@string/title"/>
        </LinearLayout>
        <ListView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:id="@+id/list"/>
</LinearLayout>
