<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
	    <ImageView 
	        android:contentDescription="@string/app_name"
	        android:id="@+id/img"
	        android:layout_width="match_parent"
	        android:layout_height="120dip"
	    	android:background="@drawable/img_showpic"/> 
	
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <ImageView
	            android:contentDescription="@string/app_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/news"/>
	        
	         <TextView android:id="@+id/text"
	             android:layout_gravity="center_vertical"
	             android:layout_marginLeft="10dip"
		        android:textSize="20sp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/news"/>
	    </LinearLayout>
	   
	    <ImageView
	        android:layout_marginTop="5dip"
	        android:contentDescription="@string/app_name"
	        android:layout_width="match_parent"
	        android:layout_height="2dip"
	        android:background="@drawable/line"/>
	    <com.zjedu.widget.MobileSysTextView 
	        android:layout_width="200dip"
	        android:layout_gravity="center_horizontal"
	        android:layout_height="wrap_content"
	        android:textColor="#8E388E"
	        android:ellipsize="marquee"
	        android:marqueeRepeatLimit="marquee_forever"
	        android:clickable="true"
	        android:singleLine="true"
	        android:focusable="true"
	        android:textSize="18sp"
	        android:focusableInTouchMode="true"
	        android:text="@string/defaultnews"
	        android:id="@+id/news1"/>
	    
	    <com.zjedu.widget.MobileSysTextView 
	        android:layout_marginTop="5dip"
	        android:layout_width="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_height="wrap_content"
	        android:textColor="#8E388E"
	        android:singleLine="true"
	        android:textSize="18sp"
	        android:text="@string/defaultnews"
	        android:id="@+id/news2"/>
	    
	    <com.zjedu.widget.MobileSysTextView 
	        android:layout_marginTop="5dip"
	        android:layout_width="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_height="wrap_content"
	        android:textColor="#8E388E"
	        android:ellipsize="marquee"
	        android:textSize="18sp"
	        android:text="@string/defaultnews"
	        android:id="@+id/news3"/>
	    <ImageView
	        android:layout_marginTop="5dip"
	        android:contentDescription="@string/app_name"
	        android:layout_width="match_parent"
	        android:layout_height="2dip"
	        android:background="@drawable/line"/>
	    
	    <LinearLayout
	        android:layout_marginTop="5dip"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        
	        <Button 
	            android:background="@drawable/btn_search"
	            android:layout_marginLeft="3dip"
	            android:id="@+id/btn1"
	            android:layout_width="102dip"
	            android:layout_height="60dip"/>
	        
	         <Button 
	            android:background="@drawable/btn_myevent"
	            android:layout_marginLeft="3dip"
	            android:id="@+id/btn2"
	            android:layout_width="102dip"
	            android:layout_height="60dip"/>
	         
	          <Button 
	            android:background="@drawable/btn_people"
	            android:layout_marginLeft="3dip"
	            android:id="@+id/btn3"
	            android:layout_width="102dip"
	            android:layout_height="60dip"/>
	    </LinearLayout>
	    
	    
	    <LinearLayout
	        android:layout_marginTop="8dip"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        
	        <Button 
	            android:background="@drawable/btn_social"
	            android:layout_marginLeft="3dip"
	            android:id="@+id/btn4"
	            android:layout_width="102dip"
	            android:layout_height="60dip"/>
	        
	         <Button 
	            android:background="@drawable/btn_location"
	            android:id="@+id/btn5"
	            android:layout_marginLeft="3dip"
	            android:layout_width="102dip"
	            android:layout_height="60dip"/>
	         
	          <Button 
	            android:background="@drawable/btn_help"
	            android:id="@+id/btn6"
	            android:layout_marginLeft="3dip"
	            android:layout_width="102dip"
	            android:layout_height="60dip"/>
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_marginTop="8dip"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        
	        <Button
	            android:background="@drawable/btn_more" 
	            android:layout_marginLeft="3dip"
	            android:id="@+id/btn7"
	            android:layout_width="102dip"
	            android:layout_height="60dip"/>
	        
	         <Button
	             android:background="@drawable/btn_weixin" 
	            android:id="@+id/btn8"
	            android:layout_marginLeft="3dip"
	            android:layout_width="102dip"
	            android:layout_height="60dip"/>
	         
	          <Button
	              android:background="@drawable/btn_about" 
	            android:id="@+id/btn9"
	            android:layout_marginLeft="3dip"
	            android:layout_width="102dip"
	            android:layout_height="60dip"/>
	    </LinearLayout>
    </LinearLayout>
</ScrollView>
